# bible.rs

./: .dockerignore  .editorconfig  .env  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
config/k8s/: biblers.yml  web.yml
config/nginx/: dhparam.pem  nginx.conf
db/: Cargo.toml
db/migrations/2018-08-31-022214_books/: down.sql  up.sql
db/migrations/2018-10-05-020255_words/: down.sql
db/migrations/2018-10-05-022234_verses_and_fts/: down.sql  up.sql
db/src/: lib.rs  sword_drill.rs
db/src/models/: mod.rs  reference.rs
db/src/schema/: auto.rs  mod.rs
migrations/2018-08-31-022214_create_bible/: down.sql
scripts/: sitemap.sql
scripts/certbot/: ssl-renew.sh
scripts/ci/: install-sqlite.sh
scripts/deploy/: install-ssh-keys.sh  remote-deploy.sh
sentry_actix/: Cargo.toml
sentry_actix/src/: lib.rs  middleware.rs
src/: lib.rs  models.rs  reference.rs  schema.rs  sword_drill.rs
src/controllers/: api.rs  mod.rs  view.rs
src/schema/: mod.rs
static/css/: style.css
static/js/: main.js
styles/: _global.scss  _reset.scss  _variables.scss  index.scss
styles/pages/: _book.scss  _chapter.scss  _search-results.scss
templates/: all-books.hbs  base.hbs  book.hbs  chapter.hbs  not-found.hbs  search-results.hbs  view.hbs
web/: Cargo.toml
web/src/: actors.rs  error.rs  json_ld.rs  macros.rs  main.rs  test.rs
web/src/actors/: mod.rs
web/src/controllers/: api.rs  mod.rs  view.rs
web/src/responder/: data.rs  json_ld.rs  link.rs  meta.rs  mod.rs
web/styles/: _autocomplete.scss  _global.scss  index.scss  main.scss
web/styles/pages/: _about.scss  _bible.scss  _book.scss  _chapter.scss  _error.scss
web/templates/: about.hbs  all-books.hbs  base.hbs  book.hbs  chapter.hbs  error.hbs  search-results.hbs
