[package]
name = "db"
version = "0.1.0"
authors = ["Dustin Speckhals <dustin1114@gmail.com>"]
edition = "2021"

[dependencies.diesel]
version = "2.0.0-rc.0"
default-features = false
features = ["sqlite", "r2d2"]

[dependencies.libsqlite3-sys]
version = ">=0.17.2, <0.25.0"
default-features = false
features = ["buildtime_bindgen"]

[dependencies]
diesel_migrations = "2.0.0-rc.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
regex = "1.5.6"
serde = "1.0.137"
serde_derive = "1.0.137"
thiserror = "1.0.31"
