[package]
name = "web"
version = "0.1.0"
authors = ["Dustin Speckhals <dustin1114@gmail.com>"]
edition = "2021"

[dependencies.db]
path = "../db"

[dependencies]
actix-files = "0.6.1"
actix-web = "4.1.0"

dotenv = "0.15.0"
env_logger = "0.9.0"
handlebars = { version = "4.3.1", features = ["dir_source"] }
lazy_static = "1.4.0"
log = "0.4.17"
num_cpus = "1.13.1"
sentry = "0.27.0"
sentry-actix = "0.27.0"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
url = "2.2.2"
