[package]
name = "web"
version = "0.1.0"
authors = ["Dustin Speckhals <dustin1114@gmail.com>"]
edition = "2021"

[dependencies.db]
path = "../db"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"

dotenv = "0.15.0"
env_logger = "0.10.0"
handlebars = { version = "4.3.6", features = ["dir_source"] }
lazy_static = "1.4.0"
log = "0.4.17"
sentry = "0.29.1"
sentry-actix = "0.29.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
url = "2.3.1"
